// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-accordion ugb-accordion ugb-accordion--design-design ugb-accordion--open className"
  role="presentation"
>
  <div
    aria-expanded="true"
    className="ugb-accordion__heading ugb--shadow-1"
    role="button"
    style={
      Object {
        "backgroundColor": "#123456",
        "borderRadius": 6,
      }
    }
    tabIndex="0"
  >
    <h4
      aria-level="3"
      role="heading"
      style={
        Object {
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "heading",
          }
        }
      />
    </h4>
    <div />
  </div>
  <p
    className="ugb-accordion__text"
    role="region"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "text",
        }
      }
    />
  </p>
</div>
`;

exports[`Accordion block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-accordion ugb-accordion"
  role="presentation"
>
  <div
    aria-expanded="false"
    className="ugb-accordion__heading"
    role="button"
    style={
      Object {
        "backgroundColor": undefined,
        "borderRadius": undefined,
      }
    }
    tabIndex="0"
  >
    <h4
      aria-level="3"
      role="heading"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Title for This Block",
          }
        }
      />
    </h4>
    <div />
  </div>
  <p
    className="ugb-accordion__text"
    role="region"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block. Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
        }
      }
    />
  </p>
</div>
`;
